samples/_failures_safe/1761506120_8af5dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0882c707.c: In function ‘print_compression_options’:
./samples/SAFE/__tmp_0882c707.c:157:12: error: missing terminating " character
  157 |     printf("3 - LZW compression
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0882c707.c:157:5: error: expected expression at end of input
  157 |     printf("3 - LZW compression
      |     ^~~~~~
./samples/SAFE/__tmp_0882c707.c:157:5: error: expected declaration or statement at end of input
